<?xml version="1.0"?>
<package format="2">
  <name>track</name>
  <version>0.1.0</version>
  <description>The track package</description>
  <maintainer email="ksm4465ksm@naver.com">sumin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>track_lidar</exec_depend>
  <exec_depend>track_path</exec_depend>
  <exec_depend>track_control</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
